--- a/MusicClubManager.Cms.Blazor/MusicClubManager.Cms.Blazor.csproj
+++ b/MusicClubManager.Cms.Blazor/MusicClubManager.Cms.Blazor.csproj
@@ -18,6 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Components\Lineup\CreateEditPerformance.razor" />
+    <None Include="Components\Lineup\LineupDetails.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.5" PrivateAssets="all" />
   </ItemGroup>
