--- a/MusicClubManager.Cms.Blazor/MusicClubManager.Cms.Blazor.csproj
+++ b/MusicClubManager.Cms.Blazor/MusicClubManager.Cms.Blazor.csproj
@@ -25,10 +25,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.5" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MusicClubManager.Sdk\MusicClubManager.Sdk.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
