--- a/MusicClubManager.Ui.Mvc/MusicClubManager.Ui.Mvc.csproj
+++ b/MusicClubManager.Ui.Mvc/MusicClubManager.Ui.Mvc.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MusicClubManager.Sdk\MusicClubManager.Sdk.csproj" />
+  </ItemGroup>
+
 </Project>
