--- a/MusicClubManager.Cms.Wpf/MusicClubManager.Cms.Wpf.csproj
+++ b/MusicClubManager.Cms.Wpf/MusicClubManager.Cms.Wpf.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\MusicClubManager.Sdk\MusicClubManager.Sdk.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
