--- a/MusicClubManager.Cms.Wpf/MusicClubManager.Cms.Wpf.csproj
+++ b/MusicClubManager.Cms.Wpf/MusicClubManager.Cms.Wpf.csproj
@@ -28,4 +28,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.122" />
+  </ItemGroup>
+
 </Project>
